fixed error via validator

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Lesson04-Mockup</title>
     <link rel="stylesheet" href="./style.css">
-    
+
   </head>
   <body>
 
@@ -58,7 +58,7 @@
       <section class="right">
         <h2 class="hide">Section Header</h2>
         <article class="border-box-2, content-box-2">
-          <h2 <p> COVID-19 Update – November 10, 2020 </p </h2>
+          <h2> COVID-19 Update – November 10, 2020 </h2>
 
         </article>
 
@@ -67,8 +67,7 @@
           <p>The shelter is currently closed to volunteers and the public. We are offering “contactless” adoptions when we have cats or kittens available. Our available cats and kittens are posted on our Available Cats webpage. Our current plan is to have a phased in re-opening of the shelter when King County moves to Phase III. Click here to learn more about how COVID-19 is impacting our shelter operations and our animal population.</p>
           <a href="#https://meowcatrescue.org/news-events/covid-19/" class="body-link">Learn more>></a>
         </article>
-
-
+  </section>
     </main>
 
 
